crates/swc/tests/tsc-references/classes/constructorDeclarations/superCalls/superCallInConstructorWithNoBaseType/input.ts/es2015.1.normal/output.js
class C {
    constructor(){
        super(); // error
    }
}
class D {
    constructor(x){
        super(); // error
        this.x = x;
    }
}
